# gedit

./: .gitlab-ci.yml  CONTRIBUTING.md  NEWS  README.md  gedit.doap  meson.build  meson_options.txt
build-aux/flatpak/: org.gnome.gedit.yml
build-aux/snap/: snapcraft.yaml
data/: meson.build  org.gnome.gedit.appdata.xml.in  org.gnome.gedit.gschema.xml.in
docs/: build.md  common-bugs.md  gedit-development-getting-started.md  how-to-write-a-gedit-plugin.md  roadmap-done.md  roadmap.md
docs/reference/: api-breaks.xml  gedit-docs.xml  gedit-sections.txt  meson.build
gedit/: Gedit-3.0.metadata  gedit-app-osx.m  gedit-app-private.h  gedit-app.c  gedit-commands-edit.c  gedit-commands-file.c  gedit-commands-help.c  gedit-commands-private.h  gedit-commands-search.c  gedit-commands-view.c  gedit-debug.c  gedit-debug.h  gedit-dirs.c  gedit-document-private.h  gedit-document.c  gedit-document.h  gedit-documents-panel.c  gedit-factory.c  gedit-file-chooser-dialog-gtk.c  gedit-file-chooser-dialog-gtk.h  gedit-file-chooser-dialog-osx.h  gedit-file-chooser-dialog-osx.m  gedit-file-chooser-dialog.c  gedit-file-chooser-dialog.h  gedit-file-chooser-open-adapter.c  gedit-file-chooser-open-dialog.c  gedit-file-chooser-open-native.c  gedit-file-chooser-open-native.h  gedit-file-chooser-open.c  gedit-file-chooser-open.h  gedit-file-chooser.c  gedit-file-chooser.h  gedit-highlight-mode-dialog.c  gedit-highlight-mode-dialog.h  gedit-highlight-mode-selector.c  gedit-highlight-mode-selector.h  gedit-history-entry.c  gedit-history-entry.h  gedit-io-error-info-bar.c  gedit-io-error-info-bar.h  (+24 more)
gedit/resources/: gedit.gresource.xml.in
gedit/resources/gtk/: menus-common.ui  menus-traditional.ui  menus.ui
gedit/resources/ui/: gedit-highlight-mode-dialog.ui  gedit-preferences-dialog.ui  gedit-shortcuts.ui
help/: LINGUAS  meson.build
help/C/: gedit-change-default-font.page  gedit-close-file.page  gedit-open-recent.page  gedit-plugins-file-browser.page  gedit-plugins-insert-date-time.page  gedit-plugins-quick-open.page  gedit-plugins-sort.page  gedit-shortcut-keys.page  gedit-tab-groups.page  gedit-tabs-moving.page  gedit-undo-redo.page  index.page
help/ca/: ca.po
help/cs/: cs.po
help/de/: de.po
help/es/: es.po
help/fr/: fr.po
help/hu/: hu.po
help/id/: id.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/ro/: ro.po
help/sv/: sv.po
help/uk/: uk.po
plugins/: generate-list.sh  list-of-gedit-plugins.md  meson.build
plugins/externaltools/tools/: functions.py
plugins/filebrowser/: filebrowser.plugin.desktop.in  gedit-file-browser-plugin.c
plugins/pythonconsole/: pythonconsole.plugin.desktop.in
plugins/quickopen/: quickopen.plugin.desktop.in
plugins/snippets/: snippets.plugin.desktop.in
plugins/snippets/snippets/: document.py
po/: POTFILES.in  ca.po  ckb.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hr.po  hu.po  id.po  ja.po  kk.po  ko.po  lt.po  lv.po  ms.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sv.po  tr.po  uk.po  vi.po  zh_CN.po  zh_TW.po
snap/: snapcraft.yaml
